[package]
name = "crabcan"
version = "0.1.0"
authors = ["litchipi <litchi.pi@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.23"
log = "0.4.14"
env_logger = "0.9.0"
rand = "0.8.4"
nix = "0.22.1"
scan_fmt = "0.2.6"
capctl = "0.2.0"
